mv auction handler to api handlers
