# internal/handlers/bannerHandler.go
@@ -1,7 +1,0 @@
-package handlers
-
-import "github.com/labstack/echo/v4"
-
-type BannerHandler interface {
-	GetBannerAuction(c echo.Context) error
-}
